--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,19 @@
 @import url('https://fonts.google.com/specimen/Spartan');
 body{
+    padding-top: 100px;
     font-size: 15px;
     background-color: hsl(0, 0%, 100%);
-    font-weight: 400, 500, 700;
     font-family: 'Spartan';
+}
+h1{
+    font-weight: 400, 500, 700;
+    font-size: 42px;
+    margin-top: 0px;
+    width: 50%;
 }
 
 .container{
-    width: 1440px;
+    max-width: 1440px;
     margin: 0 auto;
 }
 
@@ -16,10 +22,17 @@ body{
     height: auto;
     display: flex;
     justify-content: space-between;
+    margin-bottom: 50px;
 }
 
 .column1{
     width: 50%;
+}
+
+.column1 p{
+    font-size: 20px;
+    width: 73%;
+    color: hsl(303, 10%, 53%);
 }
 
 .column2{
@@ -34,15 +47,19 @@ li{
     list-style: none;
 }
 .box{
-    width: 32.5%;
+    width: 32%;
     background-color: hsl(300, 43%, 22%);
     border-radius: 5px;
-    height: auto;
+    height:200px;
 }
 .ratings{
     float: right;
-    padding-left: 40px;
+    margin-bottom: 20px;
+    padding-left: 10px;
+    padding-right: 20px;
     background-color: hsl(300, 24%, 96%);
+    border-radius: 10px;
+    font-weight: 400, 500, 700;
 }
 .mt-0{
     margin-top: 0px;
@@ -66,10 +83,10 @@ li{
     margin-right: 0px;
 }
 .mr-2{
-    margin-right: 20px;
+    margin-right: 40px;
 }
 .mr-3{
-    margin-right: 40px;
+    margin-right: 80px;
 }
 .text-white{
     color: hsl(0, 0%, 100%);
